<resources>
    <string name="app_name">Coffee Anyone ?</string>
    <string name="order">order</string>
    <string name="initial_price_value">Rs 0</string>
    <string name="price">Price</string>
    <string name="increase_value">+</string>
    <string name="decrease_value">-</string>
    <string name="initial_quantity">0</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="ping_shop">Ping the nearest coffee shop</string>
</resources>
