<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.abhilashg.coffeeanyone.MainActivity"
    android:background="#3e2723"
    android:fillViewport="true">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/name"
            android:maxLines="1"
            android:inputType="textCapSentences"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/quantity"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_quantity"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/decrease_value"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_quantity_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/initial_quantity"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/increase_value"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLayout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/price"
                android:textColor="@android:color/black"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/tv_price_Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/initial_price_value"
                android:textColor="@android:color/white"
                android:textSize="35sp" />
        </LinearLayout>

        <Button
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_layout"
            android:onClick="order"
            android:id="@+id/bt_order"
            android:text="@string/order" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/bt_call_shop"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_order"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/ping_shop"/>
    </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>


